--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -2,6 +2,7 @@
   background-image: url("./assets/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   min-height: 100vh;
 }
 
