made some changes to layout of listing card

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -5,6 +5,10 @@
   background-attachment: fixed;
   min-height: 100vh;
 }
+.listings-image {
+  margin: auto;
+  display: block;
+}
 
 .header {
   background-color: #333;
